--- a/index.html
+++ b/index.html
@@ -13,8 +13,15 @@
   </body>
 </html>
 <style>
-  body {
+  html body {
     margin: 0;
     padding: 0;
+    /*height: 100%;*/
+    /*overflow: hidden;*/
+    /*overflow-y: scroll;*/
+  }
+  body {
+    /*overflow: hidden;*/
+    /*width: 100%;*/
   }
 </style>
